--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -50,5 +50,5 @@ jobs:
       - name: Semantic releasing
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{secrets.SEMANTIC_RELEASE_GH_TOKEN}}
           GEM_HOST_API_KEY: ${{secrets.GEM_HOST_API_KEY}}
