--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Check-out code
         uses: actions/checkout@v6
+        with:
+          persist-credentials: false
 
       - name: Check if CI needs to be skipped
         uses: mstachniuk/ci-skip@v1
