feat(ci): add Node and skillkit to CI pipeline, improve skill descriptions

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -16,6 +16,12 @@ jobs:
           ruby-version: '3.4'
           bundler-cache: true
 
+      - name: Install Node
+        uses: actions/setup-node@v6
+
+      - name: Install skillkit
+        run: npm install -g skillkit@latest
+
       - name: Run unit tests
         run: bundle exec rspec --format documentation
 
