--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -55,6 +55,12 @@ jobs:
       - name: Install semantic-release
         run: npm install @semantic-release/git@9.0.1 @semantic-release/changelog@5.0.1 @semantic-release/exec@5.0.0 semantic-release-rubygem -D
 
+      - name: Generate skills from their source
+        run: bundle exec bin/generate_skills
+
+      - name: Stage added skills
+        run: git add :/skills
+
       - name: Semantic releasing
         run: npx semantic-release
         env:
